--- a/custom.css
+++ b/custom.css
@@ -65,6 +65,11 @@ body {
     margin-left: 25px;
 }
 
+
+.logo .logospan{
+    color:aqua;
+}
+
 .menu-btn {
     color: var(--site-color);
     font-size: 23px;
